plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}